Apply coding standards.

--- a/csvimport.routing.yml
+++ b/csvimport.routing.yml
@@ -1,7 +1,7 @@
 csvimport:
-  path: admin/csv-import
+  path: admin/csvimport
   defaults:
-    _form: \Drupal\csvimport\Form\CSVimportForm
+    _form: \Drupal\csvimport\Form\CsvImportForm
     _title: Import CSV
   requirements:
     _permission: administer site configuration
